2013-07-25  Roland Levillain  <roland@lrde.epita.fr>

	Remove an inadvertently added file.

	* mln/linear/#ch_convolve.hh#: Remove.

2013-07-25  Roland Levillain  <roland@lrde.epita.fr>

	Fix and improve mln::draw::dashed_line.

	* mln/core/site_set/p_line2d.hh (mln::p_line2d::has(const psite&)):
	Remove a too strict precondition.
	* mln/draw/dashed_line.hh (mln::draw::dashed_line):
	Rework implementation to make it more like mln::draw::line's.
	Clean up a bit.
	* tests/draw/dashed_line.cc: New test.
	* tests/draw/Makefile.am (check_PROGRAMS): Add dashed_line.

2013-07-04  Roland Levillain  <roland@lrde.epita.fr>

	Work around a Clang 3.0 bug.

	* tests/labeling/compute.cc,
	* tests/labeling/pack.cc:
	Here.

2013-06-28  Roland Levillain  <roland@lrde.epita.fr>

	Aesthetic changes in mln/world/binary_2d/subsample.hh.

	* mln/world/binary_2d/subsample.hh: Here.

2013-06-28  Roland Levillain  <roland@lrde.epita.fr>

	Fix two bugs in mln/world/binary_2d/subsample.hh.

	* mln/world/binary_2d/subsample.hh
	(world::binary_2d::subsample(const image2d<bool>&, unsigned)):
	Properly initialize (and deallocate) the sliding window (array of
	pointers).
	Fix the size of	the output image.
	Have the declaration of this function match its definition.
	* tests/world/binary_2d/subsample.cc: New test.
	* tests/world/binary_2d/Makefile.am
	(check_PROGRAMS): Add subsample.
	(MOSTLYCLEANFILES): Add subsample-small.pgm.

2013-06-24  Roland Levillain  <roland@lrde.epita.fr>

	Address compiler warnings about unused variables and arguments.

	* mln/algebra/mat.hh (mln::algebra::impl::det)
	* mln/linear/gaussian.hh (mln::linear::impl::generic_filter_)
	* mln/registration/icp.hh
	(mln::registration::remove_too_far_sites_debug)
	(mln::registration::compute_distance_criteria)
	* tests/io/magick/load.cc (main)
	* tests/io/magick/save.cc (main):
	Here.

2013-06-20  Roland Levillain  <roland@lrde.epita.fr>

	Avoid comparisons between signed and unsigned values.

	* apps/morphers/iz.cc: Here.